...
import br.com.alura.panucci.ui.theme.caveatFont
import br.com.alura.panucci.ui.uistate.HighlightsListUiState

@Composable
fun HighlightsListScreen(
    modifier: Modifier = Modifier,
    title: String = "Destaques do dia",
    onOrderClick: () -> Unit = {},
    onProductClick: (Product) -> Unit = {},
    uiState: HighlightsListUiState = HighlightsListUiState()
) {
    val products = uiState.products
    Column(
...
            verticalArrangement = Arrangement.spacedBy(16.dp)
        ) {
            items(products) { p ->
                HighlightProductCard(
                    product = p,
                    Modifier
                        .semantics { contentDescription = "highlights product card" }
                        .clickable {
                        onProductClick(p)
                    },
                    onOrderClick = onOrderClick
                )
            }
...
