...
                modifier = Modifier
                    .padding(
                        start = 16.dp,
                        end = 16.dp,
                        bottom = 24.dp
                    )
                    .semantics { contentDescription = "highlight screen checkout button" }
                    .clickable {
                        onOrderClick()
                    }
                    .align(Alignment.End),
                onClick = {
                    onOrderClick()
                }
            ) {
                Text(
                    text = "Pedir",
                )
            }
        }
    }
}

...
