...
                }
            }
        },
        topBar = {
            if (isShowTopBar) {
                CenterAlignedTopAppBar(
                    modifier = Modifier.semantics { contentDescription = "top app bar" },
                    title = {
                        Text(text = "Ristorante Panucci")
                    },
                )
            }
        },
...
                )
            }
        },
        floatingActionButton = {
            if (isShowFab) {
                FloatingActionButton(
                    modifier = Modifier.semantics { contentDescription = "floating action button" },
                    onClick = onFabClick
                ) {
                    Icon(
                        Icons.Filled.PointOfSale,
                        contentDescription = null
                    )
...
